# vips-microbench

./: .clang-format  .gitignore  CMakeLists.txt  README.md  RESULTS.md  identity.mat  meson.build
images/: INFO.md  meson.build
results/: gifsave.md  pillow-simd-bug.md  pr-4474.md  reuse-threads.md  rgbx.md  shrink-highway.md  simd-convf.md  simd-convi.md  simd-highway.md  simd.md  tsan-fixes.md
src/: CMakeLists.txt  exif-bench.cpp  gifsave-bench.cpp  jpeg-bench.cpp  meson.build  reduce-bench.cpp  shrink-bench.cpp  thumbnail-bench.cpp
subprojects/: .gitignore
